[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-minimal-protocol = { path = "../" }
biblatex = "0.9"
serde = "1.0.204"
serde_cbor = "0.10"
serde_derive = "1.0.204"

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

[workspace] # so that it is not included in the upper workspace
